fix table so that each row can have an expander. add css so that row is hidden by default

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,3 +3,7 @@
 	cursor: pointer;
 	padding: 10px;
 }
+
+.hiddenRow {
+    padding: 0 !important;
+}
